# cxx-ocv-lens-blur

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: diaphragm.psd
include/sgss/: color.h  filter.h  gradient_filter.h  lens_blur_filter.h  quadtree.h
ocv_lens_blur.xcodeproj/: project.pbxproj
ocv_lens_blur.xcodeproj/xcshareddata/xcschemes/: ocv_lens_blur.xcscheme
scripts/: build_opencv.sh  cpplint.sh  install_opencv.sh
src/: gradient_filter.cc  lens_blur_filter.cc  main.cc  quadtree.cc
